[project]
name = "ai-gateway"
version = "0.1.0"
description = "Unified AI Gateway with LiteLLM and FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "litellm",
    "pydantic",
    "jinja2",
    "httpx",
    "python-multipart",
    "mcp",
    ]

[tool.uv]
package = true
