[project]
name = "ai-gateway"
version = "0.1.0"
description = "Unified AI Gateway with LiteLLM and FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "litellm>=1.40.0",  # Cập nhật LiteLLM mới nhất để fix bug
    "pydantic",
    "jinja2",
    "httpx",
    "python-multipart",
    "redis",
    "langfuse>=2.33.0", # <--- QUAN TRỌNG: Ép bản Langfuse mới hỗ trợ sdk_integration
    "python-dotenv"
]

[tool.uv]
package = true
